Make files table rows hoverable

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -65,7 +65,7 @@
         </div>
         <div id='files_tree' style='display: none'><div id='tree'></div></div>
         <!--<div id='files_treetoggle' class='collapsed' onClick='toggleTree()'>&gt;</div>-->
-        <table id='files' class="table table-striped table-condensed" cellspacing="0" style='margin: auto; ' width="100%">
+        <table id='files' class="table table-striped table-hover table-condensed" cellspacing="0" style='margin: auto; ' width="100%">
             <thead>
                 <tr>
                     <th style='width: 50px;'>FDID</th>
