Fix hotfixes table using wrong pager

--- a/wwwroot/dbc/hotfixes.html
+++ b/wwwroot/dbc/hotfixes.html
@@ -130,6 +130,9 @@
             "orderMulti": false,
             "ordering": false,
             "searching": false,
+            layout: {
+                bottomEnd: 'inputPaging'
+            },
             "language": { "search": "Search: _INPUT_ " },
             "search": { "search": searchString },
             "columnDefs": [
