--- a/wwwroot/builds/diff.html
+++ b/wwwroot/builds/diff.html
@@ -103,9 +103,13 @@
                 ],
                 pageLength: 25,
                 autoWidth: false,
+                layout: {
+                    topStart: null,
+                    topEnd: null,
+                    bottomEnd: 'inputPaging'
+                },
                 deferRender: true,
                 lengthMenu: [[25, 100, 500, -1], [25, 100, 500, "All"]],
-                dom: "<'row'<'col-sm-12'tr>>" + "<'row'<'col-sm-12 col-md-5'li><'col-sm-12 col-md-7'p>>",
                 columnDefs: [{
                     "targets": 0,
                     "orderable": true,
