--- a/wwwroot/dbc/hotfixes.html
+++ b/wwwroot/dbc/hotfixes.html
@@ -45,7 +45,7 @@
         </div>
         <table class='table' id='hotfixTable'>
             <thead>
-                <tr><th>Push ID</th><th>Table name</th><th>Record ID</th><th>Build</th><th>Valid?</th><th>First seen at <small>(updates at page load)</small></th><th>&nbsp;</th></tr>
+                <tr><th style="width: 70px;">PushID</th><th>Table name</th><th style='width: 90px;'>Rec ID</th><th>Build</th><th style='width: 135px;'>Valid?</th><th style='width: 220px;'>First seen <small>(updates on load)</small></th><th>&nbsp;</th></tr>
             </thead>
             <tbody>
             </tbody>
@@ -126,7 +126,7 @@
             },
             "pageLength": 25,
             "displayStart": page * 25,
-            "autoWidth": true,
+            "autoWidth": false,
             "orderMulti": false,
             "ordering": false,
             "searching": false,
