--- a/wwwroot/dbc/info.html
+++ b/wwwroot/dbc/info.html
@@ -60,7 +60,7 @@
             </select>
             <span id='loadingHolder' class='text-danger' style='float: right'></span>
         </h3>
-        <div id='tableContainer'><table id='dbtable' class="table table-striped table-bordered table-condensed" cellspacing="0" width="100%"><thead><tr><th>Name</th><th>Records</th><th>Fields</th><th>Recordsize</th><th>TableHash</th><th>LayoutHash</th><th>Min ID</th><th>Max ID</th><th>Locale</th><th>Flags</th><th>ID Index</th><th>Total fields</th><th>Section count</th></tr></thead><tbody></tbody></table></div>
+        <div id='tableContainer'><table id='dbtable' class="table table-striped table-bordered table-condensed" cellspacing="0" width="100%"><thead><tr><th>Name</th><th>Records</th><th>Fields</th><th>Recordsize</th><th>TableHash</th><th>LayoutHash</th><th>Min ID</th><th>Max ID</th><th>Locale</th><th>Flags</th><th>ID Index</th><th>Total fields</th><th>Section count</th><th>Version</th></tr></thead><tbody></tbody></table></div>
         <script type='text/javascript'>
             let currentParams = [];
 
@@ -117,7 +117,7 @@
             }
 
             (function () {
-                fetch('/casc/listManifests')
+                fetch('/listfile/db2/builds')
                     .then((response) => response.json())
                     .then((manifests) => {
                         for (j = 0; j < manifests.length; j++) {
@@ -126,9 +126,6 @@
                         }
 
                         for (i = 0; i < knownManifests.length; i++) {
-                            if (knownManifests[i][1] == ".")
-                                continue;
-
                             if (currentParams["build"] == null) {
                                 currentParams["build"] = knownManifests[i];
                             }
