--- a/wwwroot/builds/index.html
+++ b/wwwroot/builds/index.html
@@ -98,7 +98,7 @@
                 type: "POST"
             },
             "order": [[1, 'desc']],
-            "lengthMenu": [[25, 100, 500, 1000], [25, 100, 500, 1000]],
+            "lengthChange": false,
             "columnDefs": [
                 {
                     "targets": [2, 3, 4, 5, 6, 7, 8],
