Add goblin prefix

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -226,6 +226,7 @@
                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Rootlands/11RTL_Rootlands_')">11 Harronir (RTL)</button> <br />
                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Kobold/11KO_Kobold_')">11 Kobold</button> <br />
                         <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Kobyss/11KB_Kobyss_')">11 Kobyss</button> <br />
+                        <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Goblin/11GL_Goblin_')">11 Goblin</button> <br />
                     </div>
                 </div>
              </div>
