Make overriding existing VO names optional

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -164,6 +164,9 @@
                                 <option value="WWF" selected>WWF files</option>
                             </select>
                             <br>
+                            <div class="form-check">
+                                <input id="overrideVO" type='checkbox' name='overrideVO' class="form-check-input" CHECKED/> <label class="form-check-label"for="overrideVO">Override VO? (uncheck to only add new names)</label>
+                            </div>
                             <input type="submit" id="submitButton" class="btn btn-success form-control" value="Engage!">
                         </form>
                     </div>
