Show all placeholder models by default on naming page

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -355,7 +355,7 @@
 
         (function () {
             var page = 0;
-            var searchString = "type:m2,isplaceholder,added:10.2.7.54295|current";
+            var searchString = "type:m2,isplaceholder";
             var sortCol = 0;
             var sortDesc = "asc";
 
