Start listing remote builds on builds page

--- a/wwwroot/builds/index.html
+++ b/wwwroot/builds/index.html
@@ -57,11 +57,21 @@
             </div>
         </form>
         <br />
-        <h3>Available builds <a id="reloadBuildsButton" class="btn btn-primary btn-sm" href="#" onClick="reloadBuilds()">Reload</a></h3>
+        <h3>Available local builds <a id="reloadBuildsButton" class="btn btn-primary btn-sm" href="#" onClick="reloadBuilds()">Reload</a></h3>
         <div id="buildtable_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
             <div class="col-sm-12">
                 <table id="buildtable" class="table table-sm table-hover maintable dataTable no-footer" style="clear: both" aria-describedby="buildtable_info">
                     <thead><tr><th>Patch</th><th>Build</th><th>Branch</th><th>Folder</th><th style="width: 300px">Build config</th><th style="width: 300px">CDN config</th><th style="width: 400px">&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th></tr></thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+        <h3>Available remote builds</h3>
+        <div class="alert alert-warning">Note: Remote builds could be encrypted or missing data. Loading some of these might break.</div>
+        <div id="remotebuildtable_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
+            <div class="col-sm-12">
+                <table id="remotebuildtable" class="table table-sm table-hover maintable dataTable no-footer" style="clear: both" aria-describedby="remotebuildtable_info">
+                    <thead><tr><th>Patch</th><th>Build</th><th>Branch</th><th style="width: 300px">Build config</th><th style="width: 300px">CDN config</th><th style="width: 400px">&nbsp;</th><th>&nbsp;</th><th>&nbsp;</th></tr></thead>
                     <tbody></tbody>
                 </table>
             </div>
@@ -80,7 +90,7 @@
     </div>
     <footer>
         <div class="container text-muted">
-            <p style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment whom this site is not affiliated with. <a href='https://github.com/marlamin/wow.tools.local'>Open Source</a></p>
+            <p style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment which this tool is not affiliated with. <a href='https://github.com/marlamin/wow.tools.local'>Open Source</a></p>
         </div>
     </footer>
     <script src="/js/builds.js"></script>
@@ -158,6 +168,84 @@
             ],
         });
 
+        var table = $('#remotebuildtable').DataTable({
+            "pageLength": 25,
+            "searching": false,
+            "serverSide": true,
+            "ajax": {
+                url: "/casc/builds?remote=true",
+                type: "POST"
+            },
+            "order": false,
+            "lengthChange": false,
+            "columnDefs": [
+                {
+                    "targets": [0, 1, 2, 3, 4, 5, 6, 7],
+                    "orderable": false,
+                },
+                {
+                    "targets": 2,
+                    "render": function (data, type, full, meta) {
+                        if (full[2].includes('wowdev') || full[2].includes('wowv') || full[2] == 'wowlivetest2')
+                            return "<i class='fa fa-lock' style='color: aqua'></i> " + full[2];
+
+                        return full[2];
+                    }
+                },
+                {
+                    "targets": 5,
+                    "render": function (data, type, full, meta) {
+                        let isActive = data == "True";
+                        var result = "";
+                        if (isActive) {
+                            result += '<a class="btn btn-secondary btn-sm disabled" href="#">Current build</a> <a class="btn btn-danger btn-sm" data-product="' + full[2] + '" href="#" onClick="switchToProduct(\'' + full[2] + '\', true)">Force load</a>';
+                        } else {
+                            result += '<a class="btn btn-success btn-sm" data-product="' + full[2] + '" href="#" onClick="switchToProduct(\'' + full[2] + '\', true)">Switch to build</a>';
+                        }
+                        return result;
+                    }
+                },
+                {
+                    "targets": 6,
+                    "render": function (data, type, full, meta) {
+                        return "";
+                    }
+                },
+                {
+                    "targets": 7,
+                    "render": function (data, type, full, meta) {
+                        let isActive = full[5] == "True";
+                        if (isActive)
+                            currentBuild = full[0] + "." + full[1];
+
+                        let hasManifest = full[6] == "True";
+                        let hasDBCs = full[7] == "True";
+                        var result = "";
+                        if (hasManifest) {
+                            result += '<a class="btn btn-success btn-sm disabled" href="#">Has manifest</a>';
+                        } else {
+                            result += '<a class="btn btn-danger btn-sm disabled" href="#">Manifest missing</a>';
+                        }
+                        if (hasDBCs) {
+                            if (isActive) {
+                                result += ' <a class="btn btn-success btn-sm" href="#" data-dbcproduct="' + full[2] + '" onClick="extractDBCs(\'' + full[2] + '\')">Force update</a>';
+                            } else {
+                                result += ' <a class="btn btn-success btn-sm disabled" href="#">Has DBCs</a>';
+                            }
+                        } else {
+                            if (isActive) {
+                                result += ' <a class="btn btn-primary btn-sm" href="#" data-dbcproduct="' + full[2] + '" onClick="extractDBCs(\'' + full[2] + '\')">DBCs missing, extract?</a>';
+                            } else {
+                                result += ' <a class="btn btn-danger btn-sm disabled" href="#">DBCs missing</a>';
+                            }
+                        }
+
+                        return result;
+                    }
+                }
+            ],
+        });
+
         $("#buildtable").on('draw.dt', function () {
             fetch('/casc/listManifests')
             .then((response) => response.json())
@@ -188,12 +276,12 @@
             });
         });
 
-        async function switchToProduct(product) {
+        async function switchToProduct(product, remote = false) {
             var button = document.querySelector('[data-product="' + product + '"]');
             button.innerHTML = "<i class='fa fa-spin fa-refresh'></i> Switching, please wait!";
             button.classList.remove("btn-success");
             button.classList.add("btn-danger");
-            const response = await fetch("/casc/switchProduct?product=" + product);
+            const response = await fetch("/casc/switchProduct?product=" + product + "&remote=" + remote);
             var result = await response.text();
             if (result == "true") {
                 location.reload();
