--- a/wwwroot/builds/index.html
+++ b/wwwroot/builds/index.html
@@ -87,12 +87,8 @@
             <b>File history</b><br />
             <a class="btn btn-danger btn-sm" target="_blank" href="/casc/clearFileHistory">Clear file history</a> <a class="btn btn-primary btn-sm" target="_blank" href="/casc/generateFileHistory">Generate file history</a> <a class="btn btn-success btn-sm" target="_blank" href="/casc/importAllFileHistory">Import file history</a>
         </p>
+        <p class="text-muted" style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment which this tool is not affiliated with. <a href='https://github.com/marlamin/wow.tools.local'>Open Source</a></p>
     </div>
-    <footer>
-        <div class="container text-muted">
-            <p style='font-size: 11px'>World of Warcraft and related trademarks are registered trademarks of Blizzard Entertainment which this tool is not affiliated with. <a href='https://github.com/marlamin/wow.tools.local'>Open Source</a></p>
-        </div>
-    </footer>
     <script src="/js/builds.js"></script>
     <script type='text/javascript'>
         let knownManifests = new Array();
